--- a/index.html
+++ b/index.html
@@ -6,44 +6,41 @@
 
   <title>Kaifeng Zhang</title>
 
-  <meta name="author" content="Kaifeng Zhang 张凯风">
+  <meta name="author" content="Kaifeng Zhang">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
-  <link rel="icon" type="image/png" href="images/ucsd-logo.png">
+  <!-- <link rel="icon" type="image/png" href="images/ucsd-logo.png"> -->
 </head>
 
 <body>
-  <table
-    style="width:100%;max-width:800px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+  <table style="width:100%;max-width:800px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
     <tbody>
       <tr style="padding:0px">
         <td style="padding:0px">
-          <table
-            style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+          <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
             <tbody>
               <tr style="padding:0px">
                 <td style="padding:2.5%;width:63%;vertical-align:middle">
                   <p style="text-align:center">
                     <name>Kaifeng Zhang</name>
                   </p>
-                  <p>I am a senior undergraduate student at Tsinghua University (Yao Class), majoring in computer science and artificial intelligence.
+                  <p>
+                    I am a senior undergraduate student at Tsinghua University (Yao Class), majoring in computer science and artificial intelligence.
                   </p>
-                  <p>I am interested in computer vision and machine learning, and especially diving deeper into 3D vision, self-supervised vision and their applications to robotics and graphics.
+                  <p>
+                    I am interested in computer vision and machine learning, especially 3D vision, self-supervised vision and their applications to robotics and graphics.
                   </p>
-                  <p>Currently, I am very fortunate to work with Prof. Xiaolong Wang from UC San Diego. Before that, I also worked in the Tsinghua Vision and Robotics Lab, advised by Prof. Yang Gao.
-                  <p>The webpage is still under construction. :)
-                  </p>
+                  <p>
+                    Currently, I am very fortunate to work with Prof. Xiaolong Wang from UC San Diego. Before that, I also worked in the Tsinghua Vision and Robotics Lab, advised by Prof. Yang Gao.
                 </p>
                   <p style="text-align:center">
                     <a href="mailto:zhangkf19@mails.tsinghua.edu.cn">Email</a> &nbsp/&nbsp
-                    <!--<a href="https://scholar.google.com/citations?user=2GKLw94AAAAJ&hl=en">Google Scholar</a>&nbsp/&nbsp-->
                     <a href="https://github.com/kywind/">Github</a>
                   </p>
                 </td>
                 <td style="padding:2.5%;width:35%;max-width:35%">
-                  <a href="images/profile.jpeg"><img style="width:100%;max-width:100%" alt="profile photo"
-                      src="images/profile.jpeg" class="hoverZoomLink"></a>
+                  <img style="width:100%;max-width:100%" alt="profile photo" src="images/profile.jpeg" class="hoverZoomLink"></a>
                 </td>
               </tr>
             </tbody>
@@ -56,7 +53,7 @@
                   <heading>News</heading>
                   <p>
                       <li>One paper gets accepted to ECCV 2022 as oral presentation.</li>
-                      <li>I am looking for PhD programs starting from Fall 2023.</li>
+                      <li>I am graduating this year and will apply to PhD programs starting from Fall 2023.</li>
                   </p>
                 </td>
               </tr>
@@ -72,18 +69,47 @@
               </tr>
             </tbody>
           </table>
-
-          <table
-            style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+          
+          <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
             <tbody>
+              <tr>
+                <td style="padding:20px;width:25%;vertical-align:middle">
+                  <img src='images/self-pose.png' width="160">
+                </td>
+                <td style="padding:20px;width:75%;vertical-align:middle">
+                  <a href="https://arxiv.org/abs/2210.07199">
+                    <papertitle>
+                      Self-Supervised Geometric Correspondence for Category-Level 6D Object Pose Estimation in the Wild
+                    </papertitle>
+                  </a>
+                  <br>
+                  <strong>Kaifeng Zhang</strong>,
+                  Yang Fu, 
+                  Shubhankar Borse, 
+                  Hong Cai, 
+                  Fatih Porikli,
+                  Xiaolong Wang
+                  <br>
+                  <em>arXiv, 2022.
+                  <br>
+                  <a href="https://kywind.github.io/self-pose">project page</a>
+                  /
+                  <a href="https://arxiv.org/abs/2210.07199">arXiv</a>
+                  /
+                  <a href="https://arxiv.org/pdf/2210.07199.pdf">pdf</a>
+                  <p></p>
+                </td>
+              </tr>
+          </table>
 
+          <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+            <tbody>
               <tr>
                 <td style="padding:20px;width:25%;vertical-align:middle">
                   <img src='images/sfc.png' width="160">
                 </td>
                 <td style="padding:20px;width:75%;vertical-align:middle">
-                  <a
-                    href="https://arxiv.org/abs/2207.10456">
+                  <a href="https://arxiv.org/abs/2207.10456">
                     <papertitle>
                       Semantic-Aware Fine-Grained Correspondence
                     </papertitle>
@@ -94,21 +120,15 @@
                   <strong>Kaifeng Zhang</strong>,
                   Yang Gao
                   <br>
-                  <em>European Conference on Computer Vision (<a href="https://eccv2022.org/">ECCV</a>)</em>, 2022 <strong>(Oral)</strong>
-                  <!-- (<span style="color: red;">Oral</span>) -->
-<!--                  <br>
-                  <a href="https://arxiv.org/abs/2206.08655">arXiv</a>
+                  <em>European Conference on Computer Vision (<a href="https://eccv2022.org/">ECCV</a>)</em>, 2022 <strong>(Oral)</strong>.
+                  <br>
+                  <a href="https://arxiv.org/abs/2207.10456">arXiv</a>
                   /
-                  <a href="https://github.com/hzhupku/IFA">code</a>
+                  <a href="https://arxiv.org/pdf/2207.10456.pdf">pdf</a>
                   <p></p>
                 </td>
               </tr>
-            </tbody>
-          </table>  -->
-
-        </td>
-      </tr>
-  </table>
+          </table>
 </body>
 
 </html>
