--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                   Fatih Porikli,
                   Xiaolong Wang
                   <br>
-                  <em>arXiv, 2022.
+                  <em>arXiv</em>, 2022.
                   <br>
                   <a href="https://kywind.github.io/self-pose">project page</a>
                   /
