--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                   </p>
                 </td>
                 <td style="padding:2.5%;width:35%;max-width:35%">
-                  <img style="width:100%;max-width:100%" alt="profile photo" src="images/profile2.jpeg" class="hoverZoomLink"></a>
+                  <img style="width:100%;max-width:100%" alt="profile photo" src="images/profile2.jpg" class="hoverZoomLink"></a>
                 </td>
               </tr>
             </tbody>
