update page ref

--- a/index.html
+++ b/index.html
@@ -33,9 +33,10 @@
                   </p>
                   <p>
                     Currently, I am very fortunate to work with Prof. Xiaolong Wang from UC San Diego. Before that, I also worked in the Tsinghua Vision and Robotics Lab, advised by Prof. Yang Gao.
-                </p>
+                  </p>
                   <p style="text-align:center">
                     <a href="mailto:zhangkf19@mails.tsinghua.edu.cn">Email</a> &nbsp/&nbsp
+                    <a href="https://scholar.google.com/citations?user=jwkE2lgAAAAJ">Google Scholar</a> &nbsp/&nbsp
                     <a href="https://github.com/kywind/">Github</a>
                   </p>
                 </td>
@@ -45,22 +46,26 @@
               </tr>
             </tbody>
           </table>
-          <table
-            style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+
+          <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
             <tbody>
               <tr>
                 <td style="padding:20px;width:100%;vertical-align:middle">
                   <heading>News</heading>
                   <p>
-                      <li>One paper gets accepted to ECCV 2022 as oral presentation.</li>
-                      <li>I am graduating this year and will apply to PhD programs starting from Fall 2023.</li>
+                      <li>
+                        One paper gets accepted to ECCV 2022 as oral presentation.
+                      </li>
+                      <li>
+                        I am graduating this year and will apply to PhD programs starting from Fall 2023.
+                      </li>
                   </p>
                 </td>
               </tr>
             </tbody>
           </table>
-          <table
-            style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+
+          <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
             <tbody>
               <tr>
                 <td style="padding:20px;width:100%;vertical-align:middle">
@@ -128,6 +133,20 @@
                   <p></p>
                 </td>
               </tr>
+            </tbody>
+          </table>
+
+          <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+            <tbody>
+              <tr>
+                <td style="padding: 0px">
+                  <br>
+                  <p style="text-align:right;font-size:small">
+                    Borrowed from <a href="https://jonbarron.info/">Jon Barron</a>
+                  </p>
+                </td>
+              </tr>
+            </tbody>
           </table>
 </body>
 
