--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
                   <p style="text-align:center">
                     <a href="mailto:zhangkf19@mails.tsinghua.edu.cn">Email</a> &nbsp/&nbsp
                     <a href="https://scholar.google.com/citations?user=jwkE2lgAAAAJ">Google Scholar</a> &nbsp/&nbsp
-                    <a href="https://github.com/kywind/">Github</a>
+                    <a href="https://github.com/kywind/">Github</a> &nbsp/&nbsp
+                    <a href="https://twitter.com/kaiwynd">Twitter</a>
                   </p>
                 </td>
                 <td style="padding:2.5%;width:35%;max-width:35%">
