--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     I am a senior undergraduate student at Tsinghua University (Yao Class), majoring in computer science and artificial intelligence.
                   </p>
                   <p>
-                    I am interested in computer vision and machine learning, especially 3D vision, self-supervised vision and their applications to robotics and graphics.
+                    I am interested in computer vision and machine learning, especially 3D vision and its applications to robotics.
                   </p>
                   <p>
                     Currently, I am very fortunate to work with Prof. Xiaolong Wang from UC San Diego. Before that, I also worked in the Tsinghua Vision and Robotics Lab, advised by Prof. Yang Gao.
