--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <tbody>
               <tr>
                 <td style="padding:20px;width:25%;vertical-align:middle">
-                  <img src='images/self-pose.png' width="160">
+                  <img src='images/self-pose-min.png' width="160">
                 </td>
                 <td style="padding:20px;width:75%;vertical-align:middle">
                   <a href="https://arxiv.org/abs/2210.07199">
@@ -112,7 +112,7 @@
             <tbody>
               <tr>
                 <td style="padding:20px;width:25%;vertical-align:middle">
-                  <img src='images/sfc.png' width="160">
+                  <img src='images/sfc-min.png' width="160">
                 </td>
                 <td style="padding:20px;width:75%;vertical-align:middle">
                   <a href="https://arxiv.org/abs/2207.10456">
