--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
                   <heading>News</heading>
                   <p>
                       <li>
+                        One paper gets accepted to ICLR 2023.
+                      </li>
+                      <li>
                         One paper gets accepted to ECCV 2022 as oral presentation.
                       </li>
                       <li>
@@ -96,7 +99,7 @@
                   Fatih Porikli,
                   Xiaolong Wang
                   <br>
-                  <em>arXiv</em>, 2022.
+                  <em>International Conference on Learning Representations (ICLR)</em>, 2023.
                   <br>
                   <a href="https://kywind.github.io/self-pose">project page</a>
                   /
