--- a/index.html
+++ b/index.html
@@ -26,13 +26,14 @@
                     <name>Kaifeng Zhang</name>
                   </p>
                   <p>
-                    I am a senior undergraduate student at Tsinghua University (Yao Class), majoring in computer science and artificial intelligence.
+                    I am a senior undergraduate student at Tsinghua University (Yao Class) studying computer science and artificial intelligence.
                   </p>
                   <p>
-                    I am interested in computer vision and machine learning, especially 3D vision and its applications to robotics.
-                  </p>
-                  <p>
+                    I am interested in computer vision and machine learning, especially 3D vision.
                     Currently, I am very fortunate to work with Prof. Xiaolong Wang from UC San Diego. Before that, I also worked in the Tsinghua Vision and Robotics Lab, advised by Prof. Yang Gao.
+                  </p>
+                  <p>
+                    I am applying for PhD this year! Feel free to contact me if you are interested in my research or want to discuss about PhD application. 
                   </p>
                   <p style="text-align:center">
                     <a href="mailto:zhangkf19@mails.tsinghua.edu.cn">Email</a> &nbsp/&nbsp
