self-pose capitalize

--- a/self-pose.html
+++ b/self-pose.html
@@ -6,7 +6,7 @@
         content="Self-supervised Geometric Correspondence for Category-level 6D Object Pose Estimation in the Wild.">
   <meta name="keywords" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Self-supervised Geometric Correspondence for Category-level 6D Object Pose Estimation in the Wild</title>
+  <title>Self-Supervised Geometric Correspondence for Category-Level 6D Object Pose Estimation in the Wild</title>
 
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
         rel="stylesheet">
