--- a/self-pose.html
+++ b/self-pose.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="description"
-        content="Self-supervised Geometric Correspondence for Category-level 6D Object Pose Estimation in the Wild.">
+        content="Self-Supervised Geometric Correspondence for Category-Level 6D Object Pose Estimation in the Wild.">
   <meta name="keywords" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Self-Supervised Geometric Correspondence for Category-Level 6D Object Pose Estimation in the Wild</title>
@@ -32,7 +32,7 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-2 publication-title">Self-supervised Geometric Correspondence for Category-level 6D Object Pose Estimation in the Wild</h1>
+          <h1 class="title is-2 publication-title">Self-Supervised Geometric Correspondence for Category-Level 6D Object Pose Estimation in the Wild</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
               <a href="https://kywind.github.io">Kaifeng Zhang</a><sup>1</sup>,</span>
