--- a/self-pose.html
+++ b/self-pose.html
@@ -32,7 +32,7 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-2 publication-title">Self-Supervised Geometric Correspondence for Category-Level 6D Object Pose Estimation in the Wild</h1>
+          <h1 class="title is-2-5 publication-title">Self-Supervised Geometric Correspondence for Category-Level 6D Object Pose Estimation in the Wild</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
               <a href="https://kywind.github.io">Kaifeng Zhang</a><sup>1</sup>,</span>
