--- a/self-pose.html
+++ b/self-pose.html
@@ -80,12 +80,12 @@
                 </a>
               </span>
               <span class="link-block">
-                <a href="https://kywind.github.io/self-pose"
+                <a href="https://github.com/kywind/self-corr-pose"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-github"></i>
                   </span>
-                  <span>Code (coming soon)</span>
+                  <span>Code</span>
                   </a>
               </span>
 
