--- a/index.html
+++ b/index.html
@@ -30,16 +30,21 @@
                   </p>
                   <p>
                     I am interested in computer vision and machine learning, especially 3D vision.
-                    Currently, I am very fortunate to work with Prof. Xiaolong Wang from UC San Diego. Before that, I also worked in the Tsinghua Vision and Robotics Lab, advised by Prof. Yang Gao.
+                    Currently, I am very fortunate to work with <a href="https://xiaolonw.github.io/">Prof. Xiaolong Wang</a> from UC San Diego. 
+                    Before that, I also worked in the Tsinghua Vision and Robotics Lab, advised by <a href="https://yang-gao.weebly.com/">Prof. Yang Gao</a>.
                   </p>
                   <p>
                     I am applying for PhD this year! Feel free to contact me if you are interested in my research or want to discuss about PhD application. 
+                  </p>
+                  <p>
+                    My name in Chinese: 张凯风 (zhāng Kǎi Fēng).
                   </p>
                   <p style="text-align:center">
                     <a href="mailto:zhangkf19@mails.tsinghua.edu.cn">Email</a> &nbsp/&nbsp
                     <a href="https://scholar.google.com/citations?user=jwkE2lgAAAAJ">Google Scholar</a> &nbsp/&nbsp
                     <a href="https://github.com/kywind/">Github</a> &nbsp/&nbsp
-                    <a href="https://twitter.com/kaiwynd">Twitter</a>
+                    <a href="https://twitter.com/kaiwynd">Twitter</a>&nbsp/&nbsp
+                    <a href="https://www.zhihu.com/people/zkf-36">ZhiHu</a>
                   </p>
                 </td>
                 <td style="padding:2.5%;width:35%;max-width:35%">
@@ -77,7 +82,7 @@
             <tbody>
               <tr>
                 <td style="padding:20px;width:100%;vertical-align:middle">
-                  <heading>Papers</heading> (* indicates equal contribution)
+                  <heading>Publications</heading>
                 </td>
               </tr>
             </tbody>
@@ -86,10 +91,10 @@
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
             <tbody>
               <tr>
-                <td style="padding:20px;width:25%;vertical-align:middle">
-                  <img src='images/self-pose-min.png' width="160">
+                <td style="padding:20px;width:30%;vertical-align:middle">
+                  <img src='images/self-pose-min.png' width="400">
                 </td>
-                <td style="padding:20px;width:75%;vertical-align:middle">
+                <td style="padding:20px;width:70%;vertical-align:middle">
                   <a href="https://arxiv.org/abs/2210.07199">
                     <papertitle>
                       Self-Supervised Geometric Correspondence for Category-Level 6D Object Pose Estimation in the Wild
@@ -110,7 +115,11 @@
                   <a href="https://arxiv.org/abs/2210.07199">arXiv</a>
                   /
                   <a href="https://arxiv.org/pdf/2210.07199.pdf">pdf</a>
-                  <p></p>
+                  <p>
+                    We propose a self-supervised method for category-level 6D object pose estimation 
+                    by learning dense 2D-3D geometric correspondences. Our method can train on in-the-wild RGB/RGBD image collections
+                    without any 3D annotations. 
+                  </p>
                 </td>
               </tr>
           </table>
@@ -118,10 +127,10 @@
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
             <tbody>
               <tr>
-                <td style="padding:20px;width:25%;vertical-align:middle">
-                  <img src='images/sfc-min.png' width="160">
+                <td style="padding:20px;width:30%;vertical-align:middle">
+                  <img src='images/sfc-min.png' width="400">
                 </td>
-                <td style="padding:20px;width:75%;vertical-align:middle">
+                <td style="padding:20px;width:70%;vertical-align:middle">
                   <a href="https://arxiv.org/abs/2207.10456">
                     <papertitle>
                       Semantic-Aware Fine-Grained Correspondence
@@ -138,7 +147,10 @@
                   <a href="https://arxiv.org/abs/2207.10456">arXiv</a>
                   /
                   <a href="https://arxiv.org/pdf/2207.10456.pdf">pdf</a>
-                  <p></p>
+                  <p>
+                    We show that fine-grained features learned with low-level contrastive objectives are 
+                    complementary to semantic features from image-level SSL methods. Fusing these features can significantly improve the performance for downstream tasks.
+                  </p>
                 </td>
               </tr>
             </tbody>
