--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
   <!-- <link rel="icon" type="image/png" href="images/ucsd-logo.png"> -->
 </head>
+<script async type="text/javascript" src="static/js/index.js"></script>
 
 <body>
   <table style="width:100%;max-width:800px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
@@ -37,10 +38,11 @@
                     I am applying for PhD this year! Feel free to contact me if you are interested in my research or want to discuss about PhD application. 
                   </p>
                   <p>
-                    My name in Chinese: 张凯风 (zhāng Kǎi Fēng).
+                    My name in Chinese: 张凯风 (zhang kai feng).
                   </p>
                   <p style="text-align:center">
                     <a href="mailto:zhangkf19@mails.tsinghua.edu.cn">Email</a> &nbsp/&nbsp
+                    <a href="files/resume.pdf">CV</a> &nbsp/&nbsp
                     <a href="https://scholar.google.com/citations?user=jwkE2lgAAAAJ">Google Scholar</a> &nbsp/&nbsp
                     <a href="https://github.com/kywind/">Github</a> &nbsp/&nbsp
                     <a href="https://twitter.com/kaiwynd">Twitter</a>&nbsp/&nbsp
@@ -92,7 +94,7 @@
             <tbody>
               <tr>
                 <td style="padding:20px;width:30%;vertical-align:middle">
-                  <img src='images/self-pose-min.png' width="400">
+                  <img src='images/self-pose-min.png' width="200">
                 </td>
                 <td style="padding:20px;width:70%;vertical-align:middle">
                   <a href="https://arxiv.org/abs/2210.07199">
@@ -128,7 +130,7 @@
             <tbody>
               <tr>
                 <td style="padding:20px;width:30%;vertical-align:middle">
-                  <img src='images/sfc-min.png' width="400">
+                  <img src='images/sfc-min.png' width="200">
                 </td>
                 <td style="padding:20px;width:70%;vertical-align:middle">
                   <a href="https://arxiv.org/abs/2207.10456">
@@ -150,6 +152,29 @@
                   <p>
                     We show that fine-grained features learned with low-level contrastive objectives are 
                     complementary to semantic features from image-level SSL methods. Fusing these features can significantly improve the performance for downstream tasks.
+                  </p>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+
+          <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+            <tbody>
+              <tr>
+                <td style="padding:20px;width:100%;vertical-align:middle">
+                  <heading>Misc</heading>
+                  <p>
+                      <li>
+                        Some of my interesting <a href="javascript:;" onclick="showProjects()">course projects</a>
+                      </li>
+                      <div class="projects" id="projects">
+                        <p>
+                          test
+                        </p>
+                      </div>
+                      <li>
+                        My WeChat ID is <strong>kywindz</strong>. You can drop me a friend request if you feel more comfortable to chat this way.
+                      </li>
                   </p>
                 </td>
               </tr>
