--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                       <li>
                         Some of my interesting <a href="javascript:;" onclick="showProjects()">course projects</a>
                       </li>
-                      <div class="projects" id="projects">
+                      <div class="projects" id="projects" style="display: none">
                         <p>
                           test
                         </p>
