update course projects

--- a/index.html
+++ b/index.html
@@ -167,10 +167,48 @@
                       <li>
                         Some of my interesting <a href="javascript:;" onclick="showProjects()">course projects</a>
                       </li>
-                      <div class="projects" id="projects" style="display: none">
-                        <p>
-                          test
-                        </p>
+                      <div class="projects" id="projects">
+                        <br>
+                        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+                          <tbody>
+                            <tr>
+                              <td style="padding:10px;width:100%;vertical-align:middle">
+                                <em>AI+X project</em>
+                                <br>
+                                A Statistical Study of Integrated Livestock-Fish Production in Myanmar using Satellite Imagery
+                                <br>
+                                <a href="https://github.com/PKUCER/YONGONCHICKENFISH">GitHub</a>
+                                /
+                                <a href="files/AIX-report.pdf">pdf</a>
+                              </td>
+                            </tr>
+                        </table>
+                        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+                          <tbody>
+                              <td style="padding:10px;width:100%;vertical-align:middle">
+                                <em>Fall 2021, Intelligent System and Robotics</em>
+                                <br>
+                                Quadruped Locomotion with Reinforcement Learning and Visual Signal
+                                <br>
+                                <a href="https://github.com/kywind/Robotics-Project">GitHub</a>
+                                /
+                                <a href="files/robotics-report.pdf">pdf</a>
+                              </td>
+                            </tr>
+                        </table>
+                        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+                          <tbody>
+                            <tr>
+                              <td style="padding:10px;width:100%;vertical-align:middle">
+                                <em>Fall 2021, Advanced Computer Graphics</em>
+                                <br>
+                                Ray Tracing and Path Tracing
+                                <br>
+                                <a href="https://github.com/kywind/path-tracing">GitHub</a>
+                              </td>
+                            </tr>
+                        </table>
+                        <br>
                       </div>
                       <li>
                         My WeChat ID is <strong>kywindz</strong>. You can drop me a friend request if you feel more comfortable to chat this way.
