--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
                     <a href="files/resume.pdf">CV</a> &nbsp/&nbsp
                     <a href="https://scholar.google.com/citations?user=jwkE2lgAAAAJ">Google Scholar</a> &nbsp/&nbsp
                     <a href="https://github.com/kywind/">Github</a> &nbsp/&nbsp
-                    <a href="https://twitter.com/kaiwynd">Twitter</a>&nbsp/&nbsp
-                    <a href="https://www.zhihu.com/people/zkf-36">ZhiHu</a>
+                    <a href="https://twitter.com/kaiwynd">Twitter</a>
                   </p>
                 </td>
                 <td style="padding:2.5%;width:35%;max-width:35%">
@@ -144,7 +143,7 @@
                   <strong>Kaifeng Zhang</strong>,
                   Yang Gao
                   <br>
-                  <em>European Conference on Computer Vision (<a href="https://eccv2022.org/">ECCV</a>)</em>, 2022 <strong>(Oral)</strong>.
+                  <em>European Conference on Computer Vision (ECCV)</em>, 2022 <strong>(Oral)</strong>.
                   <br>
                   <a href="https://arxiv.org/abs/2207.10456">arXiv</a>
                   /
@@ -167,7 +166,7 @@
                       <li>
                         Some of my interesting <a href="javascript:;" onclick="showProjects()">course projects</a>
                       </li>
-                      <div class="projects" id="projects" style="display: none">
+                      <div class="projects" id="projects">
                         <br>
                         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
                           <tbody>
