--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                       <li>
                         Some of my interesting <a href="javascript:;" onclick="showProjects()">course projects</a>
                       </li>
-                      <div class="projects" id="projects">
+                      <div class="projects" id="projects" style="display: none">
                         <br>
                         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
                           <tbody>
