--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                       <li>
                         Some of my interesting <a href="javascript:;" onclick="showProjects()">course projects</a>
                       </li>
-                      <div class="projects" id="projects" style="display: none">
+                      <div class="projects" id="projects">
                         <br>
                         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
                           <tbody>
@@ -179,6 +179,8 @@
                                 <a href="https://github.com/PKUCER/YONGONCHICKENFISH">GitHub</a>
                                 /
                                 <a href="files/AIX-report.pdf">pdf</a>
+                                /
+                                <a href="https://youtu.be/mofpT3WzhaU?">video (in Chinese)</a>
                               </td>
                             </tr>
                         </table>
