--- a/index.html
+++ b/index.html
@@ -37,9 +37,6 @@
                   <p>
                     I am applying for PhD this year! Feel free to contact me if you are interested in my research or want to discuss about PhD application. 
                   </p>
-                  <p>
-                    My name in Chinese: 张凯风 (zhang kai feng).
-                  </p>
                   <p style="text-align:center">
                     <a href="mailto:zhangkf19@mails.tsinghua.edu.cn">Email</a> &nbsp/&nbsp
                     <a href="files/resume.pdf">CV</a> &nbsp/&nbsp
@@ -211,6 +208,9 @@
                         </table>
                         <br>
                       </div>
+                      <li>
+                        How to pronounce my name? Try this:  Kaifeng -> 'kai-fuhng'. Zhang -> 'jahng'. You can also call me <strong>Kai</strong>.
+                      </li>
                       <li>
                         My WeChat ID is <strong>kywindz</strong>. You can drop me a friend request if you feel more comfortable to chat this way.
                       </li>
