--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     and <a href="https://yang-gao.weebly.com/">Prof. Yang Gao</a> from Tsinghua University.
                   </p>
                   <p style="text-align:center">
-                    <a href="mailto:zhangkf19@mails.tsinghua.edu.cn">Email</a> &nbsp/&nbsp
+                    <a href="mailto:kaifeng9@illinois.edu">Email</a> &nbsp/&nbsp
                     <a href="files/resume.pdf">CV</a> &nbsp/&nbsp
                     <a href="https://scholar.google.com/citations?user=jwkE2lgAAAAJ">Google Scholar</a> &nbsp/&nbsp
                     <a href="https://github.com/kywind/">Github</a> &nbsp/&nbsp
