--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                   </p>
                 </td>
                 <td style="padding:2.5%;width:35%;max-width:35%">
-                  <img style="width:100%;max-width:100%;border-radius:50%" alt="profile photo" src="images/profile.jpeg" class="hoverZoomLink"></a>
+                  <img style="width:100%;max-width:100%;border-radius:50%" alt="profile photo" src="images/profile4.jpg" class="hoverZoomLink"></a>
                 </td>
               </tr>
             </tbody>
