--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                     <!--<a href="files/resume.pdf">CV</a> &nbsp/&nbsp-->
                     <a href="https://scholar.google.com/citations?user=jwkE2lgAAAAJ">Google Scholar</a> &nbsp/&nbsp
                     <a href="https://github.com/kywind/">Github</a> &nbsp/&nbsp
-                    <a href="https://twitter.com/kaiwynd">Twitter</a> &nbsp/&nbsp
-                    <a href="https://www.linkedin.com/in/kaifeng-zhang-7b971625b/">Linkedin</a>
+                    <a href="https://twitter.com/kaiwynd">Twitter</a><!-- &nbsp/&nbsp
+                    <a href="https://www.linkedin.com/in/kaifeng-zhang-7b971625b/">Linkedin</a>-->
                   </p>
                 </td>
                 <td style="padding:2.5%;width:35%;max-width:35%">
