--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
             <tbody>
               <tr style="padding:0px">
-                <td style="padding:2.5%;width:63%;vertical-align:middle">
+                <td style="padding:2.5%;width:70%;vertical-align:middle">
                   <p style="text-align:center">
                     <name>Kaifeng Zhang</name>
                   </p>
@@ -46,8 +46,8 @@
                     <a href="https://www.linkedin.com/in/kaifeng-zhang-7b971625b/">Linkedin</a>-->
                   </p>
                 </td>
-                <td style="padding:2.5%;width:35%;max-width:35%">
-                  <img style="width:100%;max-width:100%;border-radius:50%" alt="profile photo" src="images/profile2.jpg" class="hoverZoomLink"></a>
+                <td style="padding:2.5%;width:25%;max-width:25%">
+                  <img style="width:100%;max-width:100%;border-radius:50%" alt="profile photo" src="images/profile.jpg" class="hoverZoomLink"></a>
                 </td>
               </tr>
             </tbody>
